--- a/translations/game.de.xlf
+++ b/translations/game.de.xlf
@@ -20203,5 +20203,14 @@
         <target>Es wurde eine Rauchbombe eingesetzt!</target>
       </segment>
     </unit>
+    <unit id="RoDLkY." name="Ein neuer Bürger ist in der Stadt angekommen: %citizen% (%profession%).">
+      <notes>
+        <note category="german">Ein neuer Bürger ist in der Stadt angekommen: %citizen% (%profession%).</note>
+      </notes>
+      <segment>
+        <source>Ein neuer Bürger ist in der Stadt angekommen: %citizen% (%profession%).</source>
+        <target>Ein neuer Bürger ist in der Stadt angekommen: %citizen% (%profession%).</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
