--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -223,7 +223,7 @@
       </notes>
       <segment>
         <source>%num% Zombies attackieren die Stadtbewohner!</source>
-        <target>%num% zombies ont attaqués les citoyens !</target>
+        <target>%num% zombies ont attaqué les citoyens !</target>
       </segment>
     </unit>
     <unit id="eJyeGor">
@@ -637,7 +637,7 @@
       </notes>
       <segment>
         <source>Kombinieren</source>
-        <target>Combiner</target>
+        <target>Combiner </target>
       </segment>
     </unit>
     <unit id="dizwCRc">
@@ -3239,7 +3239,7 @@
       </notes>
       <segment>
         <source>%zombie% ist von den Toten auferstanden und verlangt nach einem Kaffee!</source>
-        <target>%zombie% s'est relevé et veut du café!</target>
+        <target>%zombie% s'est relevé et veut du café !</target>
       </segment>
     </unit>
     <unit id="vlEPrgk">
@@ -3266,7 +3266,7 @@
       </notes>
       <segment>
         <source>%num% Zombies sind durch unsere Verteidigung gebrochen!</source>
-        <target>%num% zombies ont percé nos défenses !</target>
+        <target>%num% zombies ont pénétré en ville !</target>
       </segment>
     </unit>
     <unit id="IT1iVPi" name="Nicht ein Zombie hat die Stadt betreten!">
@@ -5210,7 +5210,7 @@
       </notes>
       <segment>
         <source>Du kannst helfen und dich der heutigen Nachtwache anschließen!</source>
-        <target>Vous pouvez aider en devenant veilleur !</target>
+        <target>Vous pouvez faire veilleurs cette nuit !</target>
       </segment>
     </unit>
     <unit id="xyPBCmM" name="Gefahr">
@@ -7183,7 +7183,7 @@
       </notes>
       <segment>
         <source>Unsere Verteidigung ist nicht stark genug, um dem Angriff heute Nacht standzuhalten.</source>
-        <target>Notre défense n'est pas suffisante pour encaisser l'attaque de ce soir.</target>
+        <target>Nous n'avons pas les défenses requises pour encaisser l'attaque de ce soir !</target>
       </segment>
     </unit>
     <unit id="FoS7MOU">
@@ -7192,7 +7192,7 @@
       </notes>
       <segment>
         <source>Nicht weit entfernt von deinem aktuellen Versteck erblickst du ein noch besseres Versteck... Hmmm...vielleicht solltest du umziehen?</source>
-        <target>Vous remarquez une meilleure cachette que la votre, pas très loin… Peut-être qu'elle vaudrait le coup de changer de place ?</target>
+        <target>Vous remarquez une meilleure cachette que la vôtre, pas très loin… Peut-être qu'elle vaudrait le coup de changer de place ?</target>
       </segment>
     </unit>
     <unit id="ERjA3HO" name="Du erhälst einen Bauplan, wenn Du in diesem Gebäude campst.">
@@ -7210,7 +7210,7 @@
       </notes>
       <segment>
         <source>Hier wurde bereits ein Bauplan gefunden.</source>
-        <target>Un plan de chantier a déjà été trouvé.</target>
+        <target>Ce bâtiment a déjà été étudié par quelqu'un et il n'est plus possible d'obtenir de plan de chantier ici...</target>
       </segment>
     </unit>
     <unit id="Ci7U3L." name="Aktualisierung">
@@ -7480,7 +7480,7 @@
       </notes>
       <segment>
         <source>%citizen% hat sich für heute Nacht ein Versteck gesucht ...</source>
-        <target>%citizen% a trouvé une cachette pour la nuit. Souhaitons-lui bonne chance...</target>
+        <target>%citizen% a décidé de se trouver une planque pour passer la nuit. Souhaitons-lui bonne chance !</target>
       </segment>
     </unit>
     <unit id="HyDSnff" name="%citizen% hat sein Versteck verlassen.">
@@ -7862,7 +7862,7 @@
       </notes>
       <segment>
         <source>Zusammenbauen</source>
-        <target>Assembler</target>
+        <target>Assembler </target>
       </segment>
     </unit>
     <unit id="jqa.16L">
@@ -8240,7 +8240,7 @@
       </notes>
       <segment>
         <source>%citizen% wurde von %num% Zombies zerfleischt!</source>
-        <target>%citizen% a été dévoré par %num% zombies !</target>
+        <target>%citizen% a été dévoré(e) par %num% zombies !</target>
       </segment>
     </unit>
     <unit id="0OgA2rX">
@@ -9590,7 +9590,7 @@
       </notes>
       <segment>
         <source>Meine Nachrichten lesen.</source>
-        <target>Lire mes messages.</target>
+        <target>Lire mon courrier.</target>
       </segment>
     </unit>
     <unit id="bYjLN7a" name="Draußen">
@@ -15394,7 +15394,7 @@
       </notes>
       <segment>
         <source>%count% Zombies wurden in der Stadt gesichtet, aber sie haben niemanden angegriffen: Was für ein Glücksfall...</source>
-        <target>%count% Zombies wurden in der Stadt gesichtet, aber sie haben niemanden angegriffen: Was für ein Glücksfall...</target>
+        <target>%count% zombies auraient été aperçus errant dans la ville, mais sans attaquer qui que ce soit : une aubaine...</target>
       </segment>
     </unit>
     <unit id="PgQR75x" name="Zahlreiche Diebstähle begangen">
@@ -17643,7 +17643,7 @@
       </notes>
       <segment>
         <source>Da keine lebendigen Bürger beim Angriff in der Stadt waren, wurde sie von den Zombies vollständig zerstört...</source>
-        <target>N'ayant plus de citoyens vivants dans la ville lorsqu'elle a été attaquée, elle a été complètement détruite par les zombies....</target>
+        <target>Faute de personnes vivantes, la ville a été totalement dévastée par le passage des zombies...</target>
       </segment>
     </unit>
     <unit id="OwJiT_2">
@@ -18443,7 +18443,7 @@
       </notes>
       <segment>
         <source>&lt;strong&gt;Achtung&lt;/strong&gt;: Befinden sich nicht genügend Rationen Wasser im Brunnen, arbeiten manche Konstruktionen (wie z.B. der Wasserturm) beim Angriff nicht mit voller Stärke!</source>
-        <target><![CDATA[<strong>Attention</strong>: sans eau, certaines évolutions (comme les Aqua-tourelles) ne fonctionneront pas lors de l'attaque !]]></target>
+        <target><![CDATA[<strong>Attention</strong> : sans eau, certaines évolutions (comme les Aqua-tourelles) ne fonctionneront pas lors de l'attaque !]]></target>
       </segment>
     </unit>
     <unit id="5sc0Prt" name="Diese Leiche wurde bereits außerhalb der Stadt entsorgt!">
@@ -19199,7 +19199,7 @@
       </notes>
       <segment>
         <source>Du kannst nicht flüchten, da du keine Aktionspunkte mehr übrig hast. Echt schade...</source>
-        <target>Vous ne pouvez plus fuir, vous n'avez plus de poins d'action. Dommage...</target>
+        <target>Vous ne pouvez plus fuir, vous n'avez plus de points d'action. Dommage...</target>
       </segment>
     </unit>
     <unit id="5daVnSF">
@@ -19208,7 +19208,7 @@
       </notes>
       <segment>
         <source>Du kannst nicht kämpfen, da du keine Aktionspunkte mehr übrig hast. Wie schade...</source>
-        <target>Vous ne pouvez plus lutter, vous n'avez plus de poins d'action. Dommage...</target>
+        <target>Vous ne pouvez plus lutter, vous n'avez plus de points d'action. Dommage...</target>
       </segment>
     </unit>
     <unit id="RllpyIm" name="In einer von den Zombies kontrollierten Zone ist das nicht möglich!">
@@ -19730,7 +19730,7 @@
       </notes>
       <segment>
         <source>Bürger, die aus einer Stadt verbannt wurden, haben das Recht, den weggeworfenen Müll der Stadt nach Gegenständen zu durchsuchen, die für sie nützlich sein könnten...</source>
-        <target>Les citoyens bannis d'une ville ont le droit de fouiller les ordures rejetées par la ville pour y puiser des objets qui pourraient leur être utile...</target>
+        <target>Les citoyens bannis d'une ville ont le droit de fouiller les ordures rejetées par la ville pour y puiser des objets qui pourraient leur être utiles...</target>
       </segment>
     </unit>
     <unit id="V5pq7bw">
