--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -8296,7 +8296,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Wir hatten alles, was wir brauchten nahe dem westlichen Viertel, um die schlurfenden Leichen von gestern Abend fernzuhalten, soviel ist sicher. Null Verluste - abgesehen von ein paar Häusern, die sie getroffen haben.</source>
-        <target>Wir hatten alles, was wir brauchten nahe dem westlichen Viertel, um die schlurfenden Leichen von gestern Abend fernzuhalten, soviel ist sicher. Null Verluste - abgesehen von ein paar Häusern, die sie getroffen haben.</target>
+        <target>We had what we needed near the western quarter to keep the shuffling stiffs from getting through last night, that much is sure. Zero losses - save a few houses they hit.</target>
       </segment>
     </unit>
     <unit id="RRW1KXj">
