--- a/translations/admin.en.xlf
+++ b/translations/admin.en.xlf
@@ -3493,5 +3493,41 @@
         <target>Set Password</target>
       </segment>
     </unit>
+    <unit id="fDbnikT">
+      <notes>
+        <note category="german">Format: {zombies} (heutiger Angriff) oder {tag}:{zombies} (Angriff an einem bestimmten Tag). Es können keine Tage in der Vergangenheit gewählt werden.</note>
+      </notes>
+      <segment>
+        <source>Format: {zombies} (heutiger Angriff) oder {tag}:{zombies} (Angriff an einem bestimmten Tag). Es können keine Tage in der Vergangenheit gewählt werden.</source>
+        <target>Format: {zombies} (today's attack) or {day}:{zombies} (attack for a specific day). It's not possible to select past days.</target>
+      </segment>
+    </unit>
+    <unit id="mKJLGIS" name="Stärke des Angriffs setzen">
+      <notes>
+        <note category="german">Stärke des Angriffs setzen</note>
+      </notes>
+      <segment>
+        <source>Stärke des Angriffs setzen</source>
+        <target>Set attack strength</target>
+      </segment>
+    </unit>
+    <unit id="oVZvTco" name="Chaos-Modus">
+      <notes>
+        <note category="german">Chaos-Modus</note>
+      </notes>
+      <segment>
+        <source>Chaos-Modus</source>
+        <target>Chaos Mode</target>
+      </segment>
+    </unit>
+    <unit id="cCl3Gqe" name="Stadt zerstören">
+      <notes>
+        <note category="german">Stadt zerstören</note>
+      </notes>
+      <segment>
+        <source>Stadt zerstören</source>
+        <target>Devastate town</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
