--- a/translations/admin.fr.xlf
+++ b/translations/admin.fr.xlf
@@ -3517,7 +3517,7 @@
       </notes>
       <segment>
         <source>Format: {zombies} (heutiger Angriff) oder {tag}:{zombies} (Angriff an einem bestimmten Tag). Es können keine Tage in der Vergangenheit gewählt werden.</source>
-        <target>Format: {zombies} (heutiger Angriff) oder {tag}:{zombies} (Angriff an einem bestimmten Tag). Es können keine Tage in der Vergangenheit gewählt werden.</target>
+        <target>Format : {zombies} (attaque du jour) ou {jour}:{zombies} (attaque pour un jour spécifique). Il n'est pas possible de sélectionner des jours passés.</target>
       </segment>
     </unit>
     <unit id="mKJLGIS" name="Stärke des Angriffs setzen">
@@ -3526,7 +3526,7 @@
       </notes>
       <segment>
         <source>Stärke des Angriffs setzen</source>
-        <target>Stärke des Angriffs setzen</target>
+        <target>Définir la puissance de l'attaque</target>
       </segment>
     </unit>
     <unit id="oVZvTco" name="Chaos-Modus">
@@ -3535,7 +3535,7 @@
       </notes>
       <segment>
         <source>Chaos-Modus</source>
-        <target>Chaos-Modus</target>
+        <target>Mode chaos</target>
       </segment>
     </unit>
     <unit id="cCl3Gqe" name="Stadt zerstören">
@@ -3544,7 +3544,7 @@
       </notes>
       <segment>
         <source>Stadt zerstören</source>
-        <target>Stadt zerstören</target>
+        <target>Dévaster la ville</target>
       </segment>
     </unit>
   </file>
